--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,5 +31,5 @@
     </div>
 
   </body>
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/script.js" type="module"></script>
 </html>
