--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/universe">O Universo</a></li>
         <li><a href="/exploration">Exploração</a></li>
+        <!-- <li><a href="/404">Not Found</a></li> -->
       </ul>
     </nav>
 
